	FIXED - DS plugins that return one value and a null should work properly
	FIXED - "Strange" characters (e.g. /) in NODE and LINK names broke the imagemap.
	FIXED - Map Style settings in editor were broken after internal defaults changes
	FIXED - Imagemap no longer contains areas with no href defined
	ADDED - Option of a dropdown selector to navigate between maps (in full-size view)
	ADDED - Maps can be organised into groups in Cacti plugin. These appear
			as tabs in the UI for viewing maps.
	ADDED - Extra variables can be defined per-group, so all maps in a group can have similar settings (e.g. a "24hr average" tab).
	ADDED - INCLUDE keyword to include a file of common definitions (based on work by BorisL)
			(NOTE: this can confuse the editor sometimes - see the manual page for INCLUDE)
	ADDED - Warning for maps that contain OVERLIBGRAPH but not 'HTMLSTYLE overlib'
	ADDED - Warning for use of TEMPLATE not as the first line of an object (overwrites settings otherwise)
	ADDED - SCALE will accept values below 0, and also above 100
	ADDED - USESCALE has two new options: absolute and percent, which allows you to have a SCALE of absolute values
	ADDED - New datasource plugin to support statistics from TheWitness's DSStats Cacti Plugin. This gets you daily,weekly,monthly and annual stats with no complicated rrdtool stuff.
	ADDED - New converter to take a rrdtool-based map config and make it into a DSStats-based one
	ADDED - static datasource can be used for negative values
	
0.96a	FIXED - New z-ordering code did not work correctly on PHP4. This broke (at least) the editor. (thanks toe_cutter)
	FIXED - \n is no longer treated as a newline in TARGETs (thanks NetAdmin)
	FIXED - KILO was broken completely between 0.95b and 0.96 (thanks Jethro Binks)
	FIXED - Link comments in certain positions could cause div-by-zero errors. (thanks again Jethro)
	FIXED - USEICONSCALE didn't colorise (broken between 0.95b and 0.96 again) (thanks colejv)